--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <div class="card-body">
                         <fieldset class="fieldset">
                             <label class="label">Mobile Number</label>
-                            <input type="text" class="input" placeholder="Enter Your Mobile Number" />
+                            <input id="mobile-num" type="text" class="input" placeholder="Enter Your Mobile Number" />
                             <label class="label">Pin Number</label>
                             <input type="password" class="input" placeholder="Enter Your 4 Digit Pin" />
-                            <button class="btn btn-neutral mt-4">Login</button>
+                            <button id="btn-login" class="btn btn-neutral mt-4">Login</button>
                         </fieldset>
                     </div>
                 </div>
@@ -39,6 +39,10 @@
         </div>
     </main>
 
+
+
+
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
