alhamdulliah another page redirect through js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <label class="label">Mobile Number</label>
                             <input id="mobile-num" type="text" class="input" placeholder="Enter Your Mobile Number" />
                             <label class="label">Pin Number</label>
-                            <input type="password" class="input" placeholder="Enter Your 4 Digit Pin" />
+                            <input id="pin-num" type="password" class="input" placeholder="Enter Your 4 Digit Pin" />
                             <button id="btn-login" class="btn btn-neutral mt-4">Login</button>
                         </fieldset>
                     </div>
