--- a/html/home.html
+++ b/html/home.html
@@ -20,14 +20,14 @@
             <div class="stats shadow">
                 <div class="stat">
                     <div class="stat-title text-xl font-bold">Available Balance</div>
-                    <div class="stat-value">9400</div>
+                    <div id="available-balance" class="stat-value">9400</div>
                 </div>
             </div>
 
             <div class="divider divider-success"></div>
 
             <!-- user action buttons -->
-            <button class="btn btn-primary mr-20">Add Money</button>
+            <button id="btn-add-money" class="btn btn-primary mr-20">Add Money</button>
             <button class="btn btn-secondary">Cash Out</button>
 
             <div class="divider divider-success"></div>
@@ -37,11 +37,11 @@
                 <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <div class="card-body">
                         <fieldset class="fieldset">
-                            <label class="label">Mobile Number</label>
-                            <input id="mobile-num" type="text" class="input" placeholder="Enter Your Mobile Number" />
-                            <label class="label">Pin Number</label>
-                            <input id="pin-num" type="password" class="input" placeholder="Enter Your 4 Digit Pin" />
-                            <button id="btn-login" class="btn btn-primary mt-4">Add Money</button>
+                            <label class="label">Amount</label>
+                            <input id="amount-input" type="text" class="input" placeholder="Enter Your Amount" />
+                            <label class="label">Pin</label>
+                            <input id="pin-input" type="password" class="input" placeholder="Enter Your Pin" />
+                            <button id="btn-add-money-form" class="btn btn-primary mt-4">Add Money</button>
                         </fieldset>
                     </div>
                 </div>
@@ -51,8 +51,8 @@
         </div>
     </main>
 
-
     <script src="../js/homeAddMoney.js"></script>
+    <script src="../js/homeCashOut.js"></script>
 </body>
 
 </html>
