alhamdulliah cash out feature added

--- a/html/home.html
+++ b/html/home.html
@@ -32,21 +32,38 @@
 
             <div class="divider divider-success"></div>
 
-            <!-- user input forms -->
+            <!-- add money forms -->
             <div class="flex justify-center items-center my-10">
                 <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <div class="card-body">
                         <fieldset class="fieldset">
                             <label class="label">Amount</label>
-                            <input id="amount-input" type="text" class="input" placeholder="Enter Your Amount" />
+                            <input id="add-money-amount-input" type="text" class="input" placeholder="Cash In Amount" />
                             <label class="label">Pin</label>
-                            <input id="pin-input" type="password" class="input" placeholder="Enter Your Pin" />
+                            <input id="add-money-pin-input" type="password" class="input" placeholder="Enter Your Pin" />
                             <button id="btn-add-money-form" class="btn btn-primary mt-4">Add Money</button>
                         </fieldset>
                     </div>
                 </div>
 
             </div>
+
+            <!-- cash out forms-->
+            <div class="flex justify-center items-center my-10">
+                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div class="card-body">
+                        <fieldset class="fieldset">
+                            <label class="label">Amount</label>
+                            <input id="cash-out-amount-input" type="text" class="input" placeholder="Cash Out Amount" />
+                            <label class="label">Pin</label>
+                            <input id="cash-out-pin-input" type="password" class="input" placeholder="Enter Your Pin" />
+                            <button id="btn-cash-out-form" class="btn btn-secondary mt-4">Cash Out </button>
+                        </fieldset>
+                    </div>
+                </div>
+
+            </div>
+
 
         </div>
     </main>
